--- a/QuickStartApp/res/values/strings.xml
+++ b/QuickStartApp/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="btn_find_bridge">Find new bridge</string>
     <string name="btn_random">Random Lights</string>
     <string name="search_progress">Searching ...</string>
+    <string name="connecting">Connecting ...</string>
     <string name="btn_ok">Ok</string>
     <string name="btn_cancel">Cancel</string>
     <string name="txt_could_not_connect">No connection</string>
@@ -24,7 +25,7 @@
     <string name="txt_selectbridges">Available Access Points</string>
     <string name="txt_pushlink">Pushlink</string>
     <string name="press_pushlink_button">Press the link button on the bridge</string>
-    <string name="txt_select_smartbridge">Please select a SmartBridge to use for this application</string>
+    <string name="txt_select_smartbridge">Please select a bridge to use for this app</string>
     <string name="title_error">Error</string>
     <string name="txt_last_heartbeat">Last Heartbeat : </string>
 </resources>
